# 420c-python-for-data-science

./: .gitignore
DataTable/ex00/: load_csv.py
DataTable/ex01/: aff_life.py
DataTable/ex02/: aff_pop.py
DataTable/ex03/: load_csv.py  projection_life.py
Dod/ex00/: statistics.py
Dod/ex01/: in_out.py
OOP/ex00/: S1E9.py
OOP/ex02/: DiamondTrap.py  S1E7.py
OOP/ex03/: ft_calculator.py
OOP/ex04/: ft_calculator.py
array/ex00/: give_bmi.py
array/ex01/: array2D.py
array/ex02/: load_image.py
array/ex03/: zoom.py
array/ex04/: rotate.py
array/ex05/: pimp_image.py
starting/: .gitignore
starting/00/: Hello.py
starting/01/: format_ft_time.py
starting/02/: find_ft_type.py
starting/03/: NULL_not_found.py
starting/04/: whatis.py
starting/05/: building.py
starting/06/: filterstring.py  ft_filter.py
starting/07/: sos.py
starting/08/: Loading.py
starting/09/ft_package/: LICENSE  README.md  __init__.py  pyproject.toml
