[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
license = {file = "LICENSE"}
home-page = "https://google.com"
authors = [
  { name="danrodri", email="danrodri@student.42madrid.com" },
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]